# zeroauth-vault

./: docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4c9e753cd4c5_db_init.py
backend/src/: auth.py  config.py  database.py  main.py  schema.py
backend/src/model/: __init__.py  key.py  user.py  vault.py
backend/src/routes/: auth_router.py
web/: package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/lib/: api.ts  crypto.ts
web/src/lib/contexts/: vaultcontext.tsx
web/src/lib/types/: backend.ts
